# hoodscore

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  config.example.yaml  pyproject.toml
examples/: advanced.py  basic.py
src/: __main__.py  core.py  health.py  utils.py
src/hoodscore/: __init__.py  cli.py  models.py  report.py
src/hoodscore/analyzer/: __init__.py  comparator.py  composite.py  trends.py
src/hoodscore/database/: __init__.py  neighborhoods.py
src/hoodscore/scorer/: __init__.py  amenities.py  safety.py  schools.py  walkability.py
tests/: test_analyzers.py  test_benchmark.py  test_core.py  test_integration.py  test_models.py  test_scorers.py
